<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorWhite">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp"
            android:backgroundTint="@color/colorWhite">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/album7"
                android:scaleType="center"
                android:scaleY="1"
                android:scaleX="1" />

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <EditText
                android:id="@+id/txtdsemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_email"
                android:padding="10dp"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleDrawable="@drawable/ic_key"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/txtdspassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_key"
                android:inputType="textPassword"
                android:padding="10dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/dsignupBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/signup"
            android:background="@color/colorPrimaryDark"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/deviceID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="#000000"
        android:hint="Device Id"
        android:textSize="20sp"/>

</LinearLayout>
